fix: wrong color on button

--- a/ui/src/components/auth/register-form.module.css
+++ b/ui/src/components/auth/register-form.module.css
@@ -11,5 +11,5 @@
 }
 
 .button {
-  background-image: linear-gradient(90deg, #222c71 -13.85%, #0c7f98 103.69%);
+  background: linear-gradient(90deg, #222c71 -13.85%, #0c7f98 103.69%);
 }
